# Life-simulation

./: Bacteria.cpp  Bacteria.h  BacteriaData.cpp  BacteriaData.h  CMakeLists.txt  LifeSimulator.cpp  LifeSimulator.h  NeuralNetwork.c  NeuralNetwork.cpp  NeuralNetwork.h  README.md  board.cpp  board.h  config.txt  game.cpp  game.h  game_configdata.cpp  game_configdata.h  life-sim.desktop  main.cpp  main_window.cpp  main_window.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sieci.c  sieci.h  simulation_engine.cpp  simulation_engine.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h  vcpkg.json
.github/workflows/: build.yml
shaders/: common.glsl  init_weights.cs.glsl  instance_bac.fs.glsl  kill.cs.glsl  movement.cs.glsl  pass_time.cs.glsl  process_network.cs.glsl  render_hex.vs.glsl  render_resident.fs.glsl  render_resident.vs.glsl  reproduce.cs.glsl
